[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "langgraph>=0.5.2",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "streamlit>=1.48.0",
]
