[project]
name = "planning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.76.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "protobuf>=6.33.5",
    "pydantic>=2.12.5",
    "streamlit>=1.53.1",
    "watchfiles>=1.1.1",
]
